<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailseries.DetailSeriesActivity"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/img_detail_series"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:contentDescription="@string/text_content_description_backdrop"
            android:scaleType="centerCrop"
            android:transitionName="@string/text_transition_backdrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/backdrop" />


        <ImageView
            android:contentDescription="@string/text_content_description_backdrop"
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:src="@drawable/gradient_bg"
            app:layout_constraintBottom_toBottomOf="@+id/img_detail_series"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/back_series_detail"
            android:layout_width="45dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_poster_detail_series"
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="60dp"
            android:scaleType="centerCrop"
            android:src="@drawable/item_1"
            android:contentDescription="@string/text_image_poster"
            android:transitionName="@string/text_transition_poster"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_title_detail_series"
            android:layout_width="0dp"
            style="@style/TextContent"
            android:textColor="@android:color/white"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            tools:text="The Call of the Wild"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_poster_detail_series"
            app:layout_constraintTop_toTopOf="@+id/img_poster_detail_series" />

        <RatingBar
            android:id="@+id/detail_ratingbar_series"
            style="?android:ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:rating="2.4"
            android:progressBackgroundTint="#eaeaea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_title_detail_series"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_detail_series" />

        <TextView
            android:id="@+id/tv_rating_detail_series"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_rating"
            android:gravity="center"
            tools:text="4.8"
            android:fontFamily="@font/quicksand_bold"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_ratingbar_series"
            app:layout_constraintStart_toEndOf="@+id/detail_ratingbar_series"
            app:layout_constraintTop_toTopOf="@+id/detail_ratingbar_series" />

        <TextView
            android:id="@+id/tv_date_detail_series"
            style="@style/TextContent.Detail"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/detail_ratingbar_series"
            app:layout_constraintTop_toBottomOf="@+id/detail_ratingbar_series"
            tools:text="2020-02-19" />

        <TextView
            android:id="@+id/tv_episodes_detail_series"
            style="@style/TextContent.Detail"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_date_detail_series"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_detail_series"
            tools:text="@string/text_total_episodes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_favorite_series"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_favorite"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:cornerRadius="12dp"
            app:strokeWidth="2dp"
            app:icon="@drawable/ic_favorite_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_episodes_detail_series"
            app:layout_constraintTop_toBottomOf="@+id/tv_episodes_detail_series"
            app:strokeColor="@android:color/white" />


        <TextView
            android:id="@+id/title_genre"
            style="@style/TextContent.Detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="12dp"
            android:text="@string/text_genre"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_favorite_series" />

        <HorizontalScrollView
            android:id="@+id/container_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_genre"
            app:layout_constraintTop_toBottomOf="@+id/title_genre">

            <LinearLayout
                android:id="@+id/container_linear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp" />

        </HorizontalScrollView>


        <TextView
            android:id="@+id/title_description"
            style="@style/TextContent.Detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_description"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_genre"
            app:layout_constraintTop_toBottomOf="@+id/container_genre" />

        <TextView
            android:id="@+id/tv_description_detail_series"
            style="@style/TextContent.Detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_description"
            app:layout_constraintTop_toBottomOf="@+id/title_description" />

        <TextView
            android:id="@+id/title_cast"
            style="@style/TextContent.Detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_cast"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_genre"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_detail_series" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cast_detail_series"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_cast"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/pg_cast_detail_series"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/rv_cast_detail_series"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_cast" />

        <TextView
            android:id="@+id/title_season"
            style="@style/TextContent.Detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_season"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_genre"
            app:layout_constraintTop_toBottomOf="@+id/rv_cast_detail_series" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_season_detail_series"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_season" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>